# syft-installer

./: .gitignore  DAEMON_MANAGER.md  README.md  SIMPLIFICATION_REPORT.md  check_syftbox.py  notebook_example.py  notebook_start_client.py  pyproject.toml  serve_docs.py  start_syftbox.py  syftbox.py  test_non_interactive.py  test_notebook_cell.py  test_otp_flow.py  test_silent.py  tutorial.ipynb  tutorial_final.ipynb  tutorial_v2.ipynb
.claude/: settings.local.json
.ipynb_checkpoints/: tutorial-checkpoint.ipynb  tutorial_v2-checkpoint.ipynb
docs/: INSTALL_SH_COMPARISON_REPORT.md  README.md  README_SIMPLE.md  SUMMARY.md  core-concept.html  index.html  installation.html  quickstart.html  serve_dev.py  serve_simple.py
docs/api/: index.html
docs/css/: style.css
docs/js/: main.js
examples/: Untitled.ipynb  Untitled1.ipynb  cli_quickstart.py  colab_example.py  daemon_example.py  demo_simple_api.py  manage_daemons.py  notebook_simple_api.py  quickstart.ipynb  simple_example.py  syft_install_quickstart.ipynb  test_installer.py
examples/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
syft_installer/: __init__.py  __version__.py  _auth.py  _colab_utils.py  _config.py  _daemon_manager.py  _display.py  _downloader.py  _exceptions.py  _launcher.py  _platform.py  _process.py  _progress.py  _runtime.py  _simple_installer.py  _syftbox.py  _utils.py  _validators.py  auth.py  config.py  daemon_manager.py  downloader.py  exceptions.py  hybrid_installer.py  installer.py  installer_v2.py  launcher.py  platform.py  programmatic_installer.py  runtime.py  simple_installer.py  syftbox.py  utils.py  validators.py
syft_installer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_auth.py  test_config.py  test_docs_server.py  test_launcher.py  test_validators.py
